[package]
name = "aresty"
version = "0.1.0"
edition = "2021"
authors = ["David Pozsar <david.pozsar@gmail.com>"]
description = "A compiling template library for Rust"
license = "MIT OR Apache-2.0"
repository = "https://github.com/pozs/aresty"
readme = "README.md"
keywords = ["compile", "template", "markup", "html", "rst"]
categories = ["template-engine"]

[lib]

[dependencies]
aresty_macros = "0.1"
